[gd_scene load_steps=9 format=3 uid="uid://bpembc5e676cd"]

[ext_resource type="Script" path="res://vertical_wind.gd" id="1_kq8af"]
[ext_resource type="Texture2D" uid="uid://baqst0lrtuven" path="res://wind_mouth.png" id="2_d3nth"]
[ext_resource type="Texture2D" uid="uid://bmf0q45j53bup" path="res://wind_animation/wind000.png" id="2_is6c4"]
[ext_resource type="Texture2D" uid="uid://bc44usk4gdwdy" path="res://wind_animation/wind001.png" id="3_7sj6t"]
[ext_resource type="Texture2D" uid="uid://cbjnpyflyt24y" path="res://wind_animation/wind002.png" id="4_7a0hc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_j4kqk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_is6c4")
}, {
"duration": 1.0,
"texture": ExtResource("3_7sj6t")
}, {
"duration": 1.0,
"texture": ExtResource("4_7a0hc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnx44"]
size = Vector2(14, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5ue6"]
size = Vector2(18, 7)

[node name="Vertical_wind" type="Area2D"]
script = ExtResource("1_kq8af")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 34)
sprite_frames = SubResource("SpriteFrames_j4kqk")
autoplay = "default"
frame_progress = 0.787379

[node name="inside" type="CollisionShape2D" parent="."]
position = Vector2(0, 36)
shape = SubResource("RectangleShape2D_lnx44")

[node name="Timer" type="Timer" parent="."]

[node name="WindMouth" type="Sprite2D" parent="."]
position = Vector2(0, 65)
texture = ExtResource("2_d3nth")

[node name="In_out" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="In_out"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_u5ue6")

[node name="Top" type="Marker2D" parent="."]

[node name="Bottom" type="Marker2D" parent="."]
position = Vector2(0, 69)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="In_out" to="." method="_on_in_out_body_entered"]
[connection signal="body_exited" from="In_out" to="." method="_on_in_out_body_exited"]
